exec updates, now works in win (without batchfile), kde, gnome.